--- a/src/client.css
+++ b/src/client.css
@@ -175,3 +175,11 @@ p {
     margin-top: 10px;
     color: rgba(255, 255, 255, 0.4);
 }
+
+.maximized #max-btn {
+    display: none;
+}
+
+.maximized #restore-btn {
+    display: flex !important;
+}
